--- a/Blog/templates/base.html
+++ b/Blog/templates/base.html
@@ -24,8 +24,7 @@
  <p>You are not logged in.</p>
  <a href="{% url 'login' %}">Log In</a>
  {% endif %}
- <!-- end new HTML... -->
-<a href="{% url 'login' %}">Log In</a> |
+ <!-- end new HTML... --> |
 <a href="{% url 'signup' %}">Sign Up</a>
  {% block content %}
  {% endblock content %}
