--- a/news_paper/templates/registration/login.html
+++ b/news_paper/templates/registration/login.html
@@ -7,4 +7,7 @@
  {{ form|crispy }}
  <button class="btn btn-success ml-2" type="submit">Log In</button>
 </form>
+<!-- new code here -->
+<p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
+<!-- end new code -->
 {% endblock content %}
