--- a/news_paper/templates/article_list.html
+++ b/news_paper/templates/article_list.html
@@ -1,25 +1,25 @@
-
 {% extends "base.html" %}
 {% load static %}
 {% block title %}Articles{% endblock title %}
 {% block content %}
 {% for article in article_list %}
 <div class="card">
-  <div class="card-header">
-    <span class="fw-bold">
-      <a href="#">{{ article.title }}</a>
-    </span> &middot;
-    <span class="text-muted">by {{ article.author }} | {{ article.date }}</span>
-  </div>
-  <div class="card-body">
-    {{ article.body }}
-    {% if article.image %}
-      <img src="{% static 'images/'|add:article.image %}" alt="Article Image" class="img-fluid">
-    {% endif %}
-  </div>
-  <div class="card-footer text-center text-muted">
-    <a href="#">Edit</a> <a href="#">Delete</a>
-  </div>
+ <div class="card-header">
+ <span class="fw-bold">
+ <!-- add link here! -->
+ <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
+ </span> &middot;
+ <span class="text-muted">by {{ article.author }} |
+ {{ article.date }}</span>
+ </div>
+ <div class="card-body">
+ {{ article.body }}
+ </div>
+ <div class="card-footer text-center text-muted">
+ <!-- new links here! -->
+ <a href="{% url 'article_edit' article.pk %}">Edit</a>
+ <a href="{% url 'article_delete' article.pk %}">Delete</a>
+ </div>
 </div>
 <br />
 {% endfor %}
