--- a/news_paper/templates/home.html
+++ b/news_paper/templates/home.html
@@ -6,6 +6,9 @@
  Hi {{ user.username }}! You are {{ user.age }} years old.
  <!-- end of new code -->
  <p><a href="{% url 'logout' %}">Log Out</a></p>
+ <p><a class="btn btn-primary btn-lg" href="{% url 'article_list' %}"
+    role="button">
+    View all articles</a></p> <!-- new -->
 {% else %}
  <p>You are not logged in</p>
  <a href="{% url 'login' %}">Log In</a> |
